added new activities, set Drawer Layout, updated resources

--- a/presentation/src/main/res/layout/fragment_tests.xml
+++ b/presentation/src/main/res/layout/fragment_tests.xml
@@ -5,19 +5,7 @@
     android:id="@+id/listRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.list.ListActivity">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/listToolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:gravity="center"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".screens.launch.tests.TestsFragment">
 
     <include
         android:id="@+id/listRadioBar"
@@ -26,7 +14,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listToolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listRecycler"
