--- a/presentation/src/main/res/drawable/radio_background_unchecked.xml
+++ b/presentation/src/main/res/drawable/radio_background_unchecked.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="5dp"/>
     <solid android:color="@android:color/white"/>
+    <stroke android:color="@color/colorPrimary" android:width="1dp"/>
 </shape>
