--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -19,8 +19,8 @@
     </style>
 
     <style name="AppTextStyle.Small">
-    <item name="android:textSize">@dimen/small_text</item>
-    <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textSize">@dimen/small_text</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
     </style>
 
     <style name="RadioButton">
@@ -33,4 +33,12 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+
+    <style name="AppTextStyle.Dark">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
