--- a/presentation/src/main/res/drawable/radio_background_checked.xml
+++ b/presentation/src/main/res/drawable/radio_background_checked.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="5dp"/>
     <solid android:color="#EEECEC"/>
+    <stroke android:color="#D1D1D1" android:width="1dp"/>
 </shape>
