--- a/presentation/src/main/res/layout/fragment_tests.xml
+++ b/presentation/src/main/res/layout/fragment_tests.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/listRoot"
+    android:id="@+id/testFragRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.launch.tests.TestsFragment">
 
     <include
-        android:id="@+id/listRadioBar"
+        android:id="@+id/testFragRadioBar"
         layout="@layout/radio_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,12 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listRecycler"
+        android:id="@+id/testFragList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listRadioBar"
+        app:layout_constraintTop_toBottomOf="@+id/testFragRadioBar"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
