added resources, quiz ui, tests ui

--- a/presentation/src/main/res/layout/fragment_tests.xml
+++ b/presentation/src/main/res/layout/fragment_tests.xml
@@ -9,20 +9,24 @@
 
     <include
         android:id="@+id/testFragRadioBar"
-        layout="@layout/radio_bar"
+        layout="@layout/filter_radio_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/testFragList"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testFragRadioBar"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/testFragRadioBar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/testFragList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
