--- a/presentation/src/main/res/layout/filter_radio_bar.xml
+++ b/presentation/src/main/res/layout/filter_radio_bar.xml
@@ -7,7 +7,7 @@
 
     <RadioButton
         android:id="@+id/radio_all"
-        style="@style/RadioButton"
+        style="@style/AppTextStyle.FilterButton"
         android:textColor="@color/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
 
     <RadioButton
         android:id="@+id/radio_new"
-        style="@style/RadioButton"
+        style="@style/AppTextStyle.FilterButton"
         android:textColor="@color/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
 
     <RadioButton
         android:id="@+id/radio_started"
-        style="@style/RadioButton"
+        style="@style/AppTextStyle.FilterButton"
         android:textColor="@color/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
