added new activities, local database, fixed bug

--- a/presentation/src/main/res/layout/activity_quiz.xml
+++ b/presentation/src/main/res/layout/activity_quiz.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/quizRoot"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
@@ -16,28 +15,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <ViewAnimator
-        android:id="@+id/quizLayoutAnimator"
+    <FrameLayout
+        android:id="@+id/quizLayoutPlaceholder"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/quizToolbar">
-
-        <include
-            layout="@layout/quiz_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <include
-            layout="@layout/quiz_passed_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <include
-            layout="@layout/quiz_failed_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </ViewAnimator>
+        app:layout_constraintTop_toBottomOf="@id/quizToolbar"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
