--- a/presentation/src/main/res/layout/fragment_tests.xml
+++ b/presentation/src/main/res/layout/fragment_tests.xml
@@ -8,7 +8,7 @@
     tools:context=".screens.launch.tests.TestsFragment">
 
     <include
-        android:id="@+id/testFragRadioBar"
+        android:id="@+id/testFilterBar"
         layout="@layout/filter_radio_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,15 +17,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/testRefreshLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testFragRadioBar">
+        app:layout_constraintTop_toBottomOf="@+id/testFilterBar">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/testFragList"
+            android:id="@+id/testList"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
