--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorGold">#FFCA28</color>
     <color name="colorLightSilver">#F7FAFF</color>
     <color name="colorLightGold">#FFF8F1</color>
+    <color name="colorRed">#F44336</color>
 </resources>
