--- a/presentation/src/main/res/layout/activity_launch.xml
+++ b/presentation/src/main/res/layout/activity_launch.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/launchNav"
+        android:id="@+id/launchNavigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
