--- a/presentation/src/main/res/layout/quiz_failed_layout.xml
+++ b/presentation/src/main/res/layout/quiz_failed_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,19 +7,28 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/quizFailedRetryButton"
-        style="@style/AppTextStyle.SimpleButton"
+        android:id="@+id/quizFailedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/quizFailedIcon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="@string/try_again_button" />
+        android:layout_marginTop="24dp"
+        style="@style/AppTextStyle.SimpleButton"
+        android:text="@string/try_again_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/quizFailedIcon"
+        app:layout_constraintStart_toStartOf="@+id/quizFailedIcon"
+        app:layout_constraintTop_toBottomOf="@+id/quizFailedIcon" />
 
     <ImageView
         android:id="@+id/quizFailedIcon"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/ic_sad_face" />
-</RelativeLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_sad_face"
+        android:contentDescription="@string/description_failed_icon"
+        app:layout_constraintBottom_toTopOf="@+id/quizFailedButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+</androidx.constraintlayout.widget.ConstraintLayout>
