--- a/presentation/src/main/res/layout/quiz_passed_layout.xml
+++ b/presentation/src/main/res/layout/quiz_passed_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,19 +7,40 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/quizPassedBackButton"
+        android:id="@+id/quizPassedButton"
         style="@style/AppTextStyle.SimpleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/quizPassedIcon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="@string/go_main_menu_button" />
+        android:layout_marginTop="24dp"
+        android:text="@string/go_main_menu_button"
+        app:layout_constraintBottom_toTopOf="@+id/quizPassedAgain"
+        app:layout_constraintEnd_toEndOf="@+id/quizPassedIcon"
+        app:layout_constraintStart_toStartOf="@+id/quizPassedIcon"
+        app:layout_constraintTop_toBottomOf="@+id/quizPassedIcon" />
+
+    <Button
+        android:id="@+id/quizPassedAgain"
+        style="@style/AppTextStyle.SimpleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/try_again_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/quizPassedButton"
+        app:layout_constraintStart_toStartOf="@+id/quizPassedButton"
+        app:layout_constraintTop_toBottomOf="@+id/quizPassedButton" />
 
     <ImageView
         android:id="@+id/quizPassedIcon"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/ic_happy_face" />
-</RelativeLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_happy_face"
+        android:contentDescription="@string/description_passed_icon"
+        app:layout_constraintBottom_toTopOf="@+id/quizPassedButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+</androidx.constraintlayout.widget.ConstraintLayout>
