--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -50,6 +50,18 @@
         <item name="android:button">@android:color/transparent</item>
         <item name="android:background">@drawable/filter_btn_states</item>
         <item name="android:stateListAnimator">@animator/radio_animator</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="AppTextStyle.IntroButton">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:background">@drawable/intro_btn_states</item>
+        <item name="android:stateListAnimator">@animator/radio_animator</item>
         <item name="android:textSize">@dimen/small_text</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/black</item>
